# launch

./: Cargo.toml  LICENSE  README.md  build_packages.sh  check_output.txt
.github/workflows/: release.yml
docs/: Launch Requirements.md  TreeArchitecture.md  TreeArchitectureSpec.md
src/: lib.rs  main.rs  test_utils.rs
src/application/: mod.rs
src/application/services/: app_cache.rs
src/application/use_cases/: execute_command.rs  mod.rs  omnibar.rs  search_apps.rs
src/domain/: model.rs  ports.rs
src/infrastructure/: mod.rs
src/infrastructure/filesystem/: desktop_entry_adapter.rs  fs_adapter.rs  mod.rs  procfs_adapter.rs
src/infrastructure/services/: calculator_adapter.rs  dictionary_adapter.rs  file_indexer.rs  json_macro_adapter.rs  json_shortcut_adapter.rs  llm_adapter.rs  mod.rs  settings_store.rs  shortcut_adapter.rs  system_adapter.rs  time_adapter.rs  window_adapter.rs
src/infrastructure/system/: command_executor_adapter.rs  mod.rs  power_adapter.rs
src/infrastructure/ui/: app_window.rs
src/interface/: ports.rs
tests/: ui_test.rs
