[package]
name = "launch"
version = "0.7.75"
edition = "2024"
description = "A pill-shaped launcher for Linux"
license = "MIT"
authors = ["Lee Christopher Murray <leechristophermurray@example.com>"]
repository = "https://github.com/leechristophermurray/launch"

[package.metadata.deb]
maintainer = "Lee Christopher Murray <leechristophermurray@example.com>"
copyright = "2026, Lee Christopher Murray"
license-file = ["LICENSE", "4"]
depends = "$auto"
section = "utils"
priority = "optional"
assets = [
    ["target/release/launch", "usr/bin/", "755"],
]

[package.metadata.generate-rpm]
assets = [
    { source = "target/release/launch", dest = "/usr/bin/launch", mode = "755" }
]

[dependencies]
ollama-rs = { version = "0.3.3", features = ["stream"] }
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
webster = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
meval = "0.2"

gtk4 = "0.9"
walkdir = "2"
regex = "1"
dirs = "5.0"
once_cell = "1"
fuzzy-matcher = "0.3"
glib = "0.20"

[dev-dependencies]
tempfile = "3"

